se arregle placeholder y titulo del form

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <h2 class="section-title">Contact</h2>
         <div class="contact__container bd-grid">
             <form class="contact__form" method="post" autocomplete="off" name="google-sheet">
-                <input type="text" name="Name" placeholder="Nombre y Apellido" class="contact__input" required>
-                <input type="email" name="Email"  placeholder="Email" class="contact__input" required>
-                <input type="number" name="Phone"  placeholder="Teléfono" class="contact__input" required>
+                <input type="text" name="Name" placeholder="Nombre y Apellido*" class="contact__input" required>
+                <input type="email" name="Email"  placeholder="Email*" class="contact__input" required>
+                <input type="number" name="Phone"  placeholder="Teléfono*" class="contact__input" required>
                 <textarea name="Message" cols="0" rows="10" class="contact__input contact__textarea" required></textarea>
 
                 <button type="submit" name="submit" class="contact__button button">Enviar</button>
