se agregó modal y se limpia form cuando se envia

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
      <!-- CONTACT -->
      <section class="contact section" id="contact">
-        <h2 class="section-title">Contact</h2>
+        <h2 class="section-title">Contacto</h2>
         <div class="contact__container bd-grid">
-            <form class="contact__form" method="post" autocomplete="off" name="google-sheet">
+            <form id="my-form" class="contact__form" method="post" autocomplete="off" name="google-sheet">
                 <input type="text" name="Name" placeholder="Nombre y Apellido*" class="contact__input" required>
                 <input type="email" name="Email"  placeholder="Email*" class="contact__input" required>
                 <input type="number" name="Phone"  placeholder="Teléfono*" class="contact__input" required>
@@ -26,6 +26,7 @@
         </div>
     </section>
 
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
   <script src="./script.js" defer></script>
 </body>
 </html>
